--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Link to external CSS file -->
     <link rel="stylesheet" href="style.css">
+    <!-- Link the Supabase database -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body class="p-4 sm:p-8 bg-gray-100 min-h-screen flex items-center justify-center">
     <div class="container mx-auto bg-white p-6 sm:p-8 rounded-lg shadow-xl max-w-4xl w-full">
